<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <description>
    Pure Java implementation of ONC RPC protocol specification
    (http://www.ietf.org/rfc/rfc1831.txt)
  </description>

  <groupId>org.dcache</groupId>
  <artifactId>oncrpc4j</artifactId>
  <version>2.6.4-SNAPSHOT</version>
  <name>ONCRPC4J parent project</name>
  <packaging>pom</packaging>

  <url>http://www.dCache.ORG</url>

    <scm>
        <url>https://github.com/dCache/oncrpc4j.git</url>
        <connection>scm:git:https://github.com/dCache/oncrpc4j.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/dCache/oncrpc4j.git</developerConnection>
        <tag>2.6</tag>
    </scm>

  <!--
    CODE LICENSE
  -->
  <licenses>
    <license>
      <name>
        GNU Lesser General Public License
      </name>
      <url>
        http://www.fsf.org/licensing/licenses/lgpl.txt
      </url>
    </license>
  </licenses>

  <modules>
      <module>oncrpc4j-core</module>
      <module>oncrpc4j-spring</module>
      <module>oncrpc4j-rpcgen</module>
      <module>oncrpc4j-portmapdaemon</module>
  </modules>

  <build>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.4.0</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.9.1</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.0.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>animal-sniffer-maven-plugin</artifactId>
        <version>1.15</version>
        <configuration>
          <signature>
            <groupId>org.codehaus.mojo.signature</groupId>
            <artifactId>java18</artifactId>
            <version>1.0</version>
          </signature>
        </configuration>
        <executions>
          <execution>
            <id>check-java18</id>
            <phase>test</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.4.2</version>
          <dependencies>
              <dependency>
                  <groupId>org.apache.maven.scm</groupId>
                  <artifactId>maven-scm-provider-gitexe</artifactId>
                  <version>1.9</version>
              </dependency>
          </dependencies>
      </plugin>
    </plugins>
  </build>

  <!--
    EXTERNAL DEPENDENCIES
  -->
  <dependencyManagement>
      <dependencies>
          <dependency>
              <groupId>org.glassfish.grizzly</groupId>
              <artifactId>grizzly-framework</artifactId>
              <version>2.3.24</version>
          </dependency>
          <dependency>
              <groupId>org.glassfish.grizzly</groupId>
              <artifactId>grizzly-framework-monitoring</artifactId>
              <version>2.3.24</version>
          </dependency>
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-context</artifactId>
              <version>4.0.3.RELEASE</version>
          </dependency>
          <dependency>
              <groupId>junit</groupId>
              <artifactId>junit</artifactId>
              <version>4.7</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>org.mockito</groupId>
              <artifactId>mockito-core</artifactId>
              <version>1.9.5</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>com.google.guava</groupId>
              <artifactId>guava</artifactId>
              <version>18.0</version>
          </dependency>
          <dependency>
              <groupId>org.dcache.common</groupId>
              <artifactId>dcache-auth</artifactId>
              <version>0.0.11</version>
          </dependency>
          <dependency>
              <groupId>org.glassfish.gmbal</groupId>
              <artifactId>gmbal-api-only</artifactId>
              <version>3.2.0-b003</version>
          </dependency>
          <dependency>
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-api</artifactId>
              <version>1.7.15</version>
          </dependency>
          <dependency>
              <groupId>ch.qos.logback</groupId>
              <artifactId>logback-classic</artifactId>
              <version>1.1.0</version> <!-- must match slf4j-api ver -->
          </dependency>
          <dependency>
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-simple</artifactId>
              <version>1.7.15</version>
          </dependency>
      </dependencies>
  </dependencyManagement>

  <!--
    MAVEN REPOSITORIES
  -->
  <repositories>
  <!-- Grizzly repository -->
    <repository>
      <id>download.java.net</id>
      <name>Glassfish Repository for Maven</name>
      <url>http://download.java.net/maven/glassfish/ </url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>maven2-repository.dev.java.net</id>
      <name>Java.net Repository for Maven</name>
      <url>http://download.java.net/maven/2/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>maven2-repository.dcache.org</id>
      <name>dCache.ORG Repository for Maven</name>
      <url>http://download.dcache.org/nexus/content/groups/public/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>dcache-snapshots</id>
      <name>dCache.ORG snapshots repository</name>
      <url>http://download.dcache.org/nexus/content/repositories/snapshots</url>
      <layout>default</layout>
    </repository>
  </repositories>

    <!--
                 MAVEN DEPLOYMENT REPOSITORY
    -->
  <distributionManagement>
      <repository>
          <id>dcache.org</id>
          <url>https://download.dcache.org/nexus/content/repositories/releases</url>
      </repository>
      <snapshotRepository>
          <id>dcache.org-snapshot</id>
          <url>https://download.dcache.org/nexus/content/repositories/snapshots</url>
      </snapshotRepository>
  </distributionManagement>

</project>
